feat(iteration2): 完成数据增强版，支持真实A股行情
- 添加AKShare Python微服务，支持真实K线数据采集
- 集成Maven国内镜像（阿里云），提升构建速度
- 支持Docker Compose容器化部署
- 修复类型统一问题，统一使用KLineDTO
- 添加Redis缓存支持（可配置开关）
- 添加Python微服务Dockerfile和启动脚本

真实功能：
- K线历史数据（支持日/周/月线）
- 实时行情数据（股价、涨跌幅、成交量等）
- 技术指标计算（MACD、RSI）

Mock功能：
- 舆情分析（新闻数据）
- 投资建议生成
- PDF报告生成

启动方式：
- Docker: docker-compose up -d
- 本地: python3 backend/akshare_service.py & mvn spring-boot:run